<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stocksearch.stocksearch.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_name_symbol"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <AutoCompleteTextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:ems="10"
        >
        <requestFocus />
    </AutoCompleteTextView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/button"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="160dp"
        android:onClick="onClear" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_quote"
        android:id="@+id/button2"
        android:layout_below="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:width="160dp"
        android:onClick="getQuote" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites1"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_alignTop="@+id/switch1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10sp"
        android:onClick="refresh_fav_list_five" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_refresh"
        android:id="@+id/switch1"
        android:width="125dp"
        android:paddingRight="20sp"
        android:layout_alignTop="@+id/imageButton"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:paddingTop="10sp"
        android:onClick="refresh_fav_list_five" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@android:drawable/ic_menu_rotate"
        android:layout_below="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:contentDescription="@string/refresh"
        android:clickable="true"
        android:onClick="refresh_fav_list" />

    <!--<ListView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/listView3"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_below="@+id/imageButton" />-->

    <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
        android:id="@+id/dynamiclistview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageButton" />


</RelativeLayout>
